pv-test/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: pv-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: bitnami/minio:2024.12.18
          volumeMounts:
            - mountPath: /export-0
              name: export-0
            - mountPath: /export-1/
              name: export-1
      volumes:
      - name: export-0
        persistentVolumeClaim:
          claimName: export-0-minio-0
      - name: export-1
        persistentVolumeClaim:
          claimName: export-1-minio-0
