pv-test/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: pv-test
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - pv-test-console.k8s.bumgu.com
      - pv-test-api.k8s.bumgu.com
    secretName: k8s-bumgu-com-tls
  rules:
    - host: pvc-test-console.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console-service
                port:
                  number: 9001
    - host: pvc-test-api.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-api-service
                port:
                  number: 9000
